--- a/qcm-stockage/resultat.html
+++ b/qcm-stockage/resultat.html
@@ -76,7 +76,7 @@
       "henry-k", "lavieille-d", "quinio-diraison-g"
     ];
 
-    fetch("https://script.google.com/a/macros/saint-louis29.net/s/AKfycbz3KsSx7MBtDMsXpnofXbU93stjvEMTDAyse_XkkatleYg-lBECELCn_9bxxNSMlIdprg/exec")
+    fetch("https://script.google.com/macros/s/AKfycbwKRDhOE8LM-Hra53d0ciRlxgy9tuyU_Lfk75nVV_vOXquEDZMWDPkMUu8LWbNAFejClA/exec")
       .then(res => res.json())
       .then(data => {
         const users = data.filter(item => item.username !== "admin");
