--- a/qcm-stockage/admin.html
+++ b/qcm-stockage/admin.html
@@ -1,147 +1,1 @@
-<!DOCTYPE html>
-<html lang="fr">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Admin - Résultats QCM</title>
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet"/>
-  <style>
-    body {
-      font-family: 'Orbitron', sans-serif;
-      background: #0b0c10;
-      color: white;
-      padding: 30px;
-    }
-    h1 {
-      color: #ff4d6d;
-      text-align: center;
-      margin-bottom: 20px;
-    }
-    .stats {
-      text-align: center;
-      margin-bottom: 20px;
-      font-size: 18px;
-    }
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      margin-top: 10px;
-    }
-    th, td {
-      padding: 10px;
-      border-bottom: 1px solid #444;
-      text-align: center;
-    }
-    th {
-      background-color: #14151c;
-      color: #ff7482;
-    }
-    tr.present {
-      background-color: #132e1a;
-    }
-    tr.absent {
-      background-color: #2a1414;
-      color: #999;
-    }
-    .btns {
-      display: flex;
-      justify-content: center;
-      gap: 15px;
-      margin-top: 20px;
-      flex-wrap: wrap;
-    }
-    button {
-      background: #ff4d6d;
-      border: none;
-      padding: 10px 20px;
-      border-radius: 10px;
-      color: white;
-      font-weight: bold;
-      cursor: pointer;
-    }
-    button:hover {
-      background: #ff7482;
-    }
-  </style>
-</head>
-<body>
-  <h1>👨‍🏫 Tableau de bord - Admin</h1>
-  <div class="stats" id="statsGlobal"></div>
-  <table>
-    <thead>
-      <tr>
-        <th>Élève</th>
-        <th>Score</th>
-        <th>%</th>
-        <th>Statut</th>
-      </tr>
-    </thead>
-    <tbody id="resultsTable"></tbody>
-  </table>
-  <div class="btns">
-    <button onclick="resetResults()">🔁 Réinitialiser</button>
-    <button onclick="exportCSV()">📁 Exporter CSV</button>
-  </div>
-
-  <script>
-    const allStudents = [
-      "baheux-p", "croguennec-t", "piron-a", "le-goff-e", "brehelin-e", "mekhfi-a",
-      "belbeoch-n", "jicquel-r", "gargadennec-m", "thomas-m", "leroux-e", "strullu-l",
-      "philippe-durand-e", "leverge-c", "gardeux-g", "poggi-g", "morvan-g",
-      "henry-k", "lavieille-d", "quinio-diraison-g"
-    ];
-    const totalQuestions = 5;
-    const storedResults = JSON.parse(localStorage.getItem("results")) || {};
-    const tbody = document.getElementById("resultsTable");
-
-    let scores = [];
-    allStudents.forEach(name => {
-      const score = storedResults[name];
-      const percent = score !== undefined ? Math.round((score / totalQuestions) * 100) : "-";
-      const tr = document.createElement("tr");
-      tr.className = score !== undefined ? "present" : "absent";
-      tr.innerHTML = `
-        <td>${name}</td>
-        <td>${score !== undefined ? score + "/" + totalQuestions : "-"}</td>
-        <td>${percent !== "-" ? percent + "%" : "-"}</td>
-        <td>${score !== undefined ? "✅ Répondu" : "❌ Absent"}</td>
-      `;
-      tbody.appendChild(tr);
-      if (score !== undefined) scores.push(score);
-    });
-
-    const average = (scores.reduce((a, b) => a + b, 0) / scores.length || 0).toFixed(2);
-    const best = Math.max(...scores, 0);
-    const participation = Math.round((scores.length / allStudents.length) * 100);
-
-    document.getElementById("statsGlobal").innerHTML = `
-      📊 Moyenne : <strong>${average}/${totalQuestions}</strong> — 
-      Meilleur score : <strong>${best}/${totalQuestions}</strong> — 
-      Participation : <strong>${scores.length}/${allStudents.length}</strong> (${participation}%)
-    `;
-
-    function resetResults() {
-      if (confirm("Es-tu sûr de vouloir effacer tous les résultats ?")) {
-        localStorage.removeItem("results");
-        location.reload();
-      }
-    }
-
-    function exportCSV() {
-      let csv = "Nom,Score,Pourcentage\n";
-      allStudents.forEach(name => {
-        const score = storedResults[name] ?? "-";
-        const percent = score !== "-" ? Math.round((score / totalQuestions) * 100) + "%" : "-";
-        csv += `${name},${score !== "-" ? score + "/" + totalQuestions : "-"},${percent}\n`;
-      });
-      const blob = new Blob([csv], { type: "text/csv" });
-      const url = URL.createObjectURL(blob);
-      const a = document.createElement("a");
-      a.href = url;
-      a.download = "resultats_qcm.csv";
-      a.click();
-      URL.revokeObjectURL(url);
-    }
-  </script>
-</body>
-</html>
+PLACEHOLDER_FOR_ADMIN_HTML
