--- a/qcm-stockage/oral.html
+++ b/qcm-stockage/oral.html
@@ -1,152 +1,1 @@
-<!DOCTYPE html>
-<html lang="fr">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>QCM - Évolution du Stockage</title>
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet"/>
-  <style>
-    body {
-      background: #0b0c10;
-      color: #fff;
-      font-family: 'Orbitron', sans-serif;
-      padding: 20px;
-    }
-    .container {
-      max-width: 800px;
-      margin: auto;
-      background: #1f1f2e;
-      padding: 30px;
-      border-radius: 20px;
-      box-shadow: 0 0 30px rgba(255, 77, 109, 0.2);
-    }
-    h1 {
-      text-align: center;
-      color: #ff4d6d;
-    }
-    .question {
-      margin: 25px 0;
-    }
-    .option {
-      display: block;
-      background: #14151c;
-      padding: 12px;
-      border-radius: 8px;
-      margin-top: 10px;
-      cursor: pointer;
-    }
-    .option:hover,
-    .option input:checked + span {
-      background: #ff4d6d;
-      color: #000;
-    }
-    input[type="radio"] {
-      display: none;
-    }
-    button {
-      width: 100%;
-      padding: 15px;
-      font-size: 16px;
-      font-weight: bold;
-      border: none;
-      background: #ff4d6d;
-      color: white;
-      border-radius: 12px;
-      cursor: pointer;
-      margin-top: 20px;
-    }
-    .user {
-      text-align: center;
-      margin-bottom: 15px;
-      color: #aaa;
-    }
-  </style>
-</head>
-<body>
-  <div class="container">
-    <h1>QCM - Évolution du Stockage</h1>
-    <div class="user" id="user">Chargement...</div>
-    <form id="quizForm">
-      <div class="question">
-        <p>1. Quelle technologie n'a pas de pièces mécaniques ?</p>
-        <label class="option"><input type="radio" name="q1" value="A"><span> A. SSD</span></label>
-        <label class="option"><input type="radio" name="q1" value="B"><span> B. HDD</span></label>
-        <label class="option"><input type="radio" name="q1" value="C"><span> C. Bande magnétique</span></label>
-      </div>
-
-      <div class="question">
-        <p>2. Que signifie NVMe ?</p>
-        <label class="option"><input type="radio" name="q2" value="A"><span> A. Non-Volatile Memory Express</span></label>
-        <label class="option"><input type="radio" name="q2" value="B"><span> B. New Virtual Memory Engine</span></label>
-        <label class="option"><input type="radio" name="q2" value="C"><span> C. Next Video Media Extension</span></label>
-      </div>
-
-      <div class="question">
-        <p>3. Quelle est la capacité du premier disque dur en 1956 ?</p>
-        <label class="option"><input type="radio" name="q3" value="A"><span> A. 500 Mo</span></label>
-        <label class="option"><input type="radio" name="q3" value="B"><span> B. 3,75 Mo</span></label>
-        <label class="option"><input type="radio" name="q3" value="C"><span> C. 1 Go</span></label>
-      </div>
-
-      <div class="question">
-        <p>4. Quel est un inconvénient du SSD ?</p>
-        <label class="option"><input type="radio" name="q4" value="A"><span> A. Il est très lent</span></label>
-        <label class="option"><input type="radio" name="q4" value="B"><span> B. Il fait du bruit</span></label>
-        <label class="option"><input type="radio" name="q4" value="C"><span> C. Écriture limitée dans le temps</span></label>
-      </div>
-
-      <div class="question">
-        <p>5. Quel disque est un mélange de SSD et HDD ?</p>
-        <label class="option"><input type="radio" name="q5" value="A"><span> A. SSHD</span></label>
-        <label class="option"><input type="radio" name="q5" value="B"><span> B. HDD</span></label>
-        <label class="option"><input type="radio" name="q5" value="C"><span> C. SDD+</span></label>
-      </div>
-
-      <button type="button" onclick="submitQuiz()">Envoyer mes réponses</button>
-    </form>
-  </div>
-
-  <script>
-    const user = localStorage.getItem("currentUser");
-    const correctAnswers = { q1: "A", q2: "A", q3: "B", q4: "C", q5: "A" };
-const endpoint = "https://script.google.com/macros/s/AKfycbzPXIdXqqBZCIuliw9UhQ3ihMBlm47flPgHvyXCG1Zw94oei6TQTNy8ud8hkMpEIZB2mA/exec";
-
-    document.getElementById("user").textContent = user ? `Connecté : ${user}` : "Non connecté";
-
-    function submitQuiz() {
-      const answers = {};
-      let score = 0;
-      let allAnswered = true;
-
-      for (let q in correctAnswers) {
-        const selected = document.querySelector(`input[name="${q}"]:checked`);
-        if (!selected) {
-          allAnswered = false;
-          break;
-        }
-        answers[q] = selected.value;
-        if (selected.value === correctAnswers[q]) score++;
-      }
-
-      if (!allAnswered) {
-        alert("❗ Merci de répondre à toutes les questions !");
-        return;
-      }
-
-      // Envoi vers Google Sheet
-      fetch(endpoint, {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({
-          username: user,
-          score: score,
-          total: 5,
-          ...answers
-        })
-      });
-
-      setTimeout(() => window.location.href = "resultat.html", 500); // redirection
-    }
-  </script>
-</body>
-</html>
+PLACEHOLDER_FOR_ORAL_HTML
